--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-route": "1.2.16",
     "angular-ui-sortable": "~0.13.0",
     "angular-bootstrap": "~0.11.2",
-    "ng-facebook": "~0.1.3"
+    "ng-facebook": "~0.1.3",
+    "ngprogress": "~1.0.7"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
