--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-ui-sortable": "~0.13.0",
     "angular-bootstrap": "~0.11.2",
     "ng-facebook": "~0.1.3",
-    "ngprogress": "~1.0.7"
+    "ngprogress": "~1.0.7",
+    "underscore": "~1.7.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
